pridani loga a textu

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-  <h1>Naše nabídka</h1>
-  <p>
-    Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
-    šefkuchaři.
-  </p>
+  <header>
+    <img src="images/logo.png" alt="logo">
+    <p>Přijďte se potěšit naši chutnou a originální kuchyní v příjemném a milém prostředí.</p>
+  </header>
+  <div class="container">
+    <h1>Naše nabídka</h1>
+    <p>
+      Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
+      šefkuchaři.
+    </p>
+  </div>
 </body>
 
 </html>
