--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
       šefkuchaři.
     </p>
+    <div class="photo-gallery">
+      <img src="images/home1.jpg" alt="photo-galerie jidel">
+      <img src="images/home2.jpg" alt="photo-galerie jidel">
+      <img src="images/home3.jpg" alt="photo-galerie jidel">
+
+    </div>
   </div>
 </body>
 
